2011-11-14  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Unbreak the build on Mac OS X

        QMacStyle is guarded by Q_WS_MAC, which is not the case for QPA. Until
        that's been fixed in Qt we have to use the same guards in WebKit, not
        Q_OS_MAC.

        * platform/qt/RenderThemeQStyle.cpp:
        (WebCore::RenderThemeQStyle::RenderThemeQStyle):
        (WebCore::RenderThemeQStyle::adjustButtonStyle):
        (WebCore::RenderThemeQStyle::paintMenuList):
        (WebCore::RenderThemeQStyle::paintInnerSpinButton):
        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::ScrollbarThemeQt::paint):

2011-11-14  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Replace use of QApplication with QGuiApplication.

        Reviewed by Tor Arne Vestbø.

        Replace use of QApplication by QGuiApplication where applicable.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::RenderThemeQt):
        (WebCore::RenderThemeQt::platformActiveSelectionBackgroundColor):
        (WebCore::RenderThemeQt::platformInactiveSelectionBackgroundColor):
        (WebCore::RenderThemeQt::platformActiveSelectionForegroundColor):
        (WebCore::RenderThemeQt::platformInactiveSelectionForegroundColor):
        (WebCore::RenderThemeQt::platformFocusRingColor):
        (WebCore::RenderThemeQt::systemColor):
        (WebCore::RenderThemeQt::minimumMenuListSize):
        (WebCore::RenderThemeQt::getMediaControlForegroundColor):
        (WebCore::RenderThemeQt::paintMediaVolumeSliderTrack):
        (WebCore::RenderThemeQt::caretBlinkInterval):

2011-11-14  Jaehoon Jeong  <jh4u.jeong@samsung.com>

        [CMAKE] Add the UseV8.cmake to WebCore.
        https://bugs.webkit.org/show_bug.cgi?id=72000

        Reviewed by Daniel Bates.

        Add the UseV8.cmake to WebCore to build bindings of V8 and
        generate JavaScript codes given IDL input.

        * UseV8.cmake: Added.

2011-11-11  Pierre Rossi  <pierre.rossi@gmail.com>
