@@ -1,3 +1,12 @@
+2011-11-14  Pavel Feldman  <pfeldman@google.com>
+
+        Web Inspector: [regression r99960] null callback access.
+        https://bugs.webkit.org/show_bug.cgi?id=72263
+
+        Reviewed by Yury Semikhatsky.
+
+        * inspector/CodeGeneratorInspector.py:
+
 2011-11-14  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
 
         [Qt] Unbreak the build on Mac OS X
